--- a/style/index.css
+++ b/style/index.css
@@ -1,28 +1,26 @@
-#container {
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 1fr 1fr;
-}
 #container>div {
     border: 1px solid gray;
     padding: 5px;
 }
-#itemC {
-  	display: flex;
+#data {
+    width: 40em;
+}
+#wordTable {
+    display: flex;
     justify-content: center;
 }
-#itemC table {
+#wordTable table {
     border-collapse: collapse;
-}
-#itemC table, #itemC th, #itemC td {
     border: 1px solid black;
 }
-#itemC td {
+#wordTable td {
+    border: 1px solid black;
     width: 20px;
     height: 20px;
     text-align: center;
 }
-#itemD select {
+#words {
+    box-sizing: border-box;
     width: 100%;
-    height: 100%;
+    height: 10em;
 }
